MDEV-17018 JSON_SEARCH and User-Defined Variables.

Item_func_json_search needs a member to store the path.